# jaafar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: main.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  signup.rs
src-tauri/src/captcha_solvers/: capsolver.rs
src-tauri/src/captchas/: capsolver.rs  mod.rs
src-tauri/src/data/: mod.rs  plugins.rs  profiles.rs  regexes.yaml  speech_synthesis.rs
src-tauri/src/integrated_services/: mod.rs
src-tauri/src/integrated_services/phone_numbers/: mod.rs
src-tauri/src/phone_numbers/: mod.rs  smsactivate.rs  smspva.rs
src-tauri/src/plugins/: tauri_traffic_light_positioner_plugin.rs
src-tauri/src/services/: account_service.rs  captcha_service.rs  files_service.rs  http_service.rs  mod.rs  proxies_service.rs  settings.rs
src-tauri/src/signups/: mod.rs  sabrina_handler.rs  setup.rs
src-tauri/src/signups/active/: dead_and_company_handler.rs  mod.rs
src-tauri/src/signups/legacy/: sabrina_handler.rs
src-tauri/src/stealth/: audio_fingerprint.rs  canvas_fingerprint.rs  desktop_capabilities.rs  hardware_concurrency_and_memory.rs  macros.rs  mod.rs  screen_resolution.rs  speech_synthesis.rs  user_agent.rs
src-tauri/src/utils/: browser.rs  mod.rs  plugins.rs  profiles.rs  retry.rs  stealth.rs
src/lib/: utils.js  utils.ts
src/lib/components/: accounts-table.svelte  header.svelte  light-switch.svelte  navbar.svelte  navigation-button.svelte  (+4 more)
src/routes/: +layout.js  +layout.svelte  +layout.ts
(+137 files in other folders)
